Fix log viewer scrollbar

--- a/src/styles/layout/foundation.less
+++ b/src/styles/layout/foundation.less
@@ -135,6 +135,12 @@ Flex Container Column
 
 }
 
+.flex-shrink {
+
+  flex-shrink: 1;
+
+}
+
 .flex-no-shrink {
 
   flex-shrink: 0;
